--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Outfit', sans-serif;
 }
 
+
 html, body {
-  height: 100%; 
+  height: 100%;
 }
 
 .container {
@@ -14,6 +19,7 @@ html, body {
   justify-content: center;
   align-items: center;
   height: 100%; 
+  background-color: #1a2b33;
 }
 
 .board {
@@ -25,10 +31,87 @@ html, body {
   height: 400px;  
 }
 
-.board > .cell {
-  background-color: white;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+.start-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  padding: 100px;
+}
+
+.title {
+  color: white;
+  font-size: 3rem;
+}
+
+.player-selection {
+  display: flex;
+  box-shadow: 0 10px 7px rgba(0, 0, 0, 0.3);
+  padding: 30px;
+  gap: 50px;
+  border-radius: 10px;
+  background-color: #27414e;
+}
+
+.x-selection, .o-selection {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 10px;
+  padding: 30px 40px;
+  gap: 40px;
+  background-color: #1a2b33;
+  text-align: center;
+  font-size: 8rem;
+  font-weight: bold;
+  color: white;
+}
+
+.x-selection:focus-within,
+.o-selection:focus-within,
+.x-selection:hover,
+.o-selection:hover {
+  outline: none;
+  box-shadow: 0 4px 20px 0 rgba(0,0,0,0.25);
+  transform: scale(1.05);
+  transition: box-shadow 0.2s, transform 0.2s;
+  z-index: 1;
+}
+
+.x-selection {
+  background-color: rgb(211, 43, 43);
+}
+
+.o-selection {
+  background-color: rgb(58, 58, 219);
+}
+
+.player-selection input {
   border: none;
+  outline: none;
+  padding: 10px 0px;
+  border-radius: 10px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.start-game {
+  padding: 20px 80px;
+  background-color: #27414e;
+  border: none;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0 10px 7px rgba(0, 0, 0, 0.3);
+  color: white;
+}
+
+.start-game:active,
+.start-game:hover {
+  transform: scale(1.08);
+  box-shadow: 0 6px 24px 0 rgba(0,0,0,0.25);
+  transition: box-shadow 0.1s, transform 0.1s;
 }
 
 .game-info, .board {
@@ -42,4 +125,27 @@ html, body {
 .board.disabled {
   pointer-events: none;
   opacity: 0.5; 
+}
+
+.icon-x {
+  width: 70px;   
+  height: 70px;  
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+}
+
+.icon-o {
+  width: 75px;   
+  height: 75px;  
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+}
+
+.cell {
+  border: none;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  background-color: white;
+  border-radius: 10px;
 }
